<resources>
    <string name="app_name">My work time</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_link_txt">No account? Register here</string>
    <string name="reenter_the_password">Reenter the password</string>
    <string name="register">Register</string>
    <string name="login_error">Error trying to login. Please retry</string>
    <string name="action_logout">Logout</string>
    <string name="no_project_message">You have no projects. Please add some!</string>
    <string name="error_getting_projects">Some unknown error occurred while getting the projects. \nPlease try again later!</string>
    <string name="txt_enter_name_project">Enter the name of the project</string>
    <string name="add_project">Add project</string>
    <string name="cancel">Cancel</string>
    <string name="error_project_name_empty">The project name should not be empty</string>
    <string name="start">Start</string>
    <string name="tap_again_to_exit_message">Tap again to exit the app</string>
    <string name="work_state_started">You have started work on </string>
    <string name="work_state_ended">You have no started work on </string>
    <string name="work_button_text_end">End work</string>
    <string name="work_button_text_start">Start work</string>
    <string name="remove_project_dialog_title">Remove project</string>
    <string name="remove_project_dialog_message">Are you sure you want to remove all the elements of the project</string>
    <string name="action_add_work">Add work</string>
    <string name="description">Description</string>
    <string name="hours">Hours</string>
    <string name="activity">Activity</string>
    <string name="project">Project</string>
    <string name="date">Date</string>
    <string name="action_ok">OK</string>
    <string name="date_piker_title">Pick the date</string>
    <string name="date_emtpy_error">The date field must not be empty</string>
    <string name="field_empty_error">This field whould not be empty</string>
    <string name="current_work_text">You have worked a total of </string>
    <string name="hours_small">hours</string>
    <string name="work_in_progress">Work in progress at </string>
    <string name="passwords_not_the_same">The passwords must contain the same value</string>
    <string name="user_collision_error">The email you have provided is already registered. Please use an other one</string>
    <string name="weak_pass_error">The passwork you have provided is too weak. The passwork needs to have at least 6 characters with numbers and letters.</string>
    <string name="invalid_email_error">Please use a valid email</string>
    <string name="error_while_registering">Some error occurred while registering the user. Please try again later</string>
</resources>
